format raw metar better

--- a/futuristic_cinnamon_alt.conf
+++ b/futuristic_cinnamon_alt.conf
@@ -3,7 +3,7 @@
 # A futuristic style conky for cinnamon, using an alternate weather fetcher
 # Date    : 2020-06-14
 # Author  : Dylan Delgado
-# Version : 1.0
+# Version : 1.1
 # License : Distributed under the terms of the GNU GPL version 2 or later
 #=====================================================================================
 # CONKY
@@ -33,6 +33,10 @@
 # https://www.dafont.com/azonix.font
 #=====================================================================================
 # For this to work you will need my weather fetcher pythonconkyfetch2.py, which can be found at https://github.com/Dylan1496/Conkys/blob/master/scripts/pythonconkyfetch2.py.
+#=====================================================================================
+# UPDATE LOG
+# 1.0 (2020-06-14) - Initial release.
+# 1.1 (2020-07-07) - Use fold command to clean up metar formatting.
 #=====================================================================================
 
 ]]
@@ -140,6 +144,6 @@ ${voffset 5}Disk Usage: ${color5}${diskiograph_read nvme0n1 35,120 ff0000 ffffff
 
 #Local weather - change KBUF to the closest METAR station
 ${voffset 8}${font Azonix:size=16}${alignc}W E A T H E R${font}
-${voffset 2}${font Azonix:size=10}${execpi 3600 python ~/.config/conky/pythonconkyfetch2.py KBUF}${font}
+${voffset 2}${font Azonix:size=10}${execpi 3600 python ~/.config/conky/pythonconkyfetch2.py KBUF | fold -w 63}${font}
 ${voffset 2}
 ]]
